--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<i class="fa fa-commenting-o" aria-hidden="true" onclick="openChat()"></i>
 		</div>
 		<div id="chat-frame" class="hide">
-			<iframe src='https://webchat.botframework.com/embed/Bot_handle_user_info?s=9ZKA4pODegs.cwA.0EQ.IAZ-XKtHc_SVANypS-j8-WWsaNSB9V8Kbv55RvhScxo'></iframe>
+			<iframe src='https://webchat.botframework.com/embed/bot_handle_info?s=v4mpOIqt9_U.cwA.Dms.Cs3fLZ9-dh2wIQVPi3NM3F5UyoKAZhqLR2huFFxZzzE'></iframe>
 			<i id="closeBtn" class="fa fa-times" aria-hidden="true" onclick="closeChat()"></i>
 		</div>
 	</div>
