--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 	</content><!-- Content end-->
 
 	<div id="chat">
-		<div id="chatBtn">
-			<i class="fa fa-commenting-o" aria-hidden="true" onclick="openChat()"></i>
+		<div id="chatBtn" onclick="openChat()>
+			<i class="fa fa-commenting-o" aria-hidden="true" "></i>
 		</div>
 		<div id="chat-frame" class="hide">
 			<iframe src='https://webchat.botframework.com/embed/bot_handle_info?s=v4mpOIqt9_U.cwA.Dms.Cs3fLZ9-dh2wIQVPi3NM3F5UyoKAZhqLR2huFFxZzzE'></iframe>
