fix open chat missing bug

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</content><!-- Content end-->
 
 	<div id="chat">
-		<div id="chatBtn" onclick="openChat()>
+		<div id="chatBtn" onclick="openChat()">
 			<i class="fa fa-commenting-o" aria-hidden="true" "></i>
 		</div>
 		<div id="chat-frame" class="hide">
