--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="js/style.js"></script>
 </head>
 <body>
-	<div class="bg">
+	<div class="bg container">
 	<header><!-- Header begin-->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
