--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Contoso Chat Bot</title>
@@ -11,7 +13,8 @@
 	<script src="js/style.js"></script>
 </head>
 <body>
-	<div class="bg container">
+	<div class="bg">
+		<div class="container">
 	<header><!-- Header begin-->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
@@ -37,18 +40,14 @@
 
 	<content><!-- Content begin-->
 		<div class="row">
-			<div id="left-content" class="col-sm-6">
+			<div id="left-content" class="col-sm-6 col-xs-12">
 				<div id="text">
 					<h1>Welcome to the Contoso Chat Bot</h1>
 					<p>You can manage your appointments, check currency, recognize currency here :)</p>
 				</div>
 			</div>
 			<div id="right-content" class="col-sm-6">
-				<video class="vedio" src="https://r5---sn-ntq7yn7z.c.youtube.com/videoplayback?ipbits=0&sc=yes&signature=5DBCEDCAF72C6E051A5CC899F9D2A879643EBCA8.02323A1C484DFE68F646EC5623576B8881EAE791&key=yt6&sparams=clen%2Ccp%2Cdur%2Cei%2Cgir%2Cid%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csc%2Csource%2Cexpire&lmt=1511962839591718&expire=1511984465&clen=742111&gir=yes&ip=101.100.156.142&ratebypass=yes&mn=sn-ntq7yn7z&mm=30&source=youtube&pl=24&mv=u&mt=1511962389&ms=nxu&ei=8LgeWrTXNti94ALW8IWoBA&id=o-AFV0NTYZva1qM_R0qrkOgsj345Lb9CsnItXtnoP9OuUM&mime=video%2Fmp4&dur=23.661&requiressl=yes&cp=U0pQRllTUl9LT0NQMF9RTVZFOkt1Z3ZnMnhqNk9O&itag=18&cpn=z8pyk2GUnp3xl4Mv&c=WEB&cver=2.20171127&ptk=youtube_none&pltype=contentugc" controls="controls" >
-					<p id="notSupport">
-						Your browser doesn't support this video.
-					</p>
-				</video>
+				<img src="res/img/welcomeIntent.jpg" alt="">
 			</div>
 		</div>
 	</content><!-- Content end-->
@@ -104,6 +103,7 @@
 		</div>
 	</div>
 	<!--about modal end-->
+		</div>
 	</div>
 
 </body>
